[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/options/OptionsVBox.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/ui/ui_elements/button/GameCheckButton.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/ui_elements/slider/BusVolumeSlider.tscn" type="PackedScene" id=6]

[node name="OptionsVBox" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_constants/separation = 8
alignment = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenHBox" type="HBoxContainer" parent="."]
margin_top = 244.0
margin_right = 1280.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 40 )

[node name="FullscreenLabel" type="Label" parent="FullscreenHBox"]
margin_right = 1200.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
text = "Fullscreen"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheckButton" type="CheckButton" parent="FullscreenHBox"]
margin_left = 1204.0
margin_right = 1280.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
flat = true
script = ExtResource( 4 )

[node name="MasterVolumeSlider" parent="." instance=ExtResource( 6 )]
margin_top = 292.0
margin_right = 1280.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 40 )
prefix = "Master: "
localization_enabled = false

[node name="SoundsVolumeSlider" parent="." instance=ExtResource( 6 )]
margin_top = 340.0
margin_right = 1280.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 40 )
prefix = "Sounds: "
localization_enabled = false
audio_bus = "Sounds"

[node name="MusicVolumeSlider" parent="." instance=ExtResource( 6 )]
margin_top = 388.0
margin_right = 1280.0
margin_bottom = 428.0
rect_min_size = Vector2( 0, 40 )
prefix = "Music: "
localization_enabled = false
audio_bus = "Music"

[node name="AmbientVolumeSlider2" parent="." instance=ExtResource( 6 )]
margin_top = 436.0
margin_right = 1280.0
margin_bottom = 476.0
rect_min_size = Vector2( 0, 40 )
prefix = "Ambient: "
localization_enabled = false
audio_bus = "Ambient"

[connection signal="toggled" from="FullscreenHBox/FullscreenCheckButton" to="." method="_on_FullscreenCheckButton_toggled"]
